--- a/package.json
+++ b/package.json
@@ -12,7 +12,15 @@
     "react": "^0.13.1",
     "browserify": "^9.0.8"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "browserify": "^9.0.8",
+    "gulp": "^3.8.11",
+    "gulp-uglify": "^1.2.0",
+    "react": "^0.13.1",
+    "reactify": "^1.1.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
