--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "browserify": "^9.0.8"
   },
   "devDependencies": {
+    "body-parser": "^1.12.3",
     "browserify": "^9.0.8",
+    "express": "^4.12.3",
     "gulp": "^3.8.11",
     "gulp-uglify": "^1.2.0",
     "react": "^0.13.1",
